Fixing footer spacing (#420)

--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -519,7 +519,7 @@ form {
   background-color: #fff;
   margin-top: 50px;
   margin-bottom: 50px;
-  padding-bottom: 70px;
+  padding-bottom: 40px;
   padding-top: 50px;
 }
 
